# Syntax-Assessment

./: README.md
interview/: README.md  pyproject.toml
interview/.mypy_cache/3.8/: _ast.data.json  _ast.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _csv.data.json  _csv.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  _random.data.json  _random.meta.json  _thread.data.json  _thread.meta.json  _warnings.data.json  _warnings.meta.json  _weakref.data.json  _weakref.meta.json  _weakrefset.data.json  _weakrefset.meta.json  abc.data.json  abc.meta.json  argparse.data.json  argparse.meta.json  array.data.json  array.meta.json  ast.data.json  ast.meta.json  atexit.data.json  atexit.meta.json  base64.data.json  base64.meta.json  builtins.data.json  builtins.meta.json  code.data.json  code.meta.json  codecs.data.json  codecs.meta.json  codeop.data.json  codeop.meta.json  contextlib.data.json  contextlib.meta.json  (+168 more)
interview/.mypy_cache/3.9/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _random.data.json  _random.meta.json  _thread.data.json  _thread.meta.json  _warnings.data.json  _warnings.meta.json  _weakref.data.json  _weakref.meta.json  _weakrefset.data.json  _weakrefset.meta.json  abc.data.json  abc.meta.json  app.data.json  app.meta.json  argparse.data.json  argparse.meta.json  array.data.json  array.meta.json  ast.data.json  ast.meta.json  atexit.data.json  atexit.meta.json  base64.data.json  base64.meta.json  builtins.data.json  (+179 more)
(+953 files in other folders)
